@@ -82,6 +82,23 @@ describe Rufus::Lua::State do
       expect(@s.eval('return true')).to eq true
     end
 
+    it 'accepts a binding optional argument'
+
+    it 'accepts a filename and a lineno optional arguments' do
+
+      le = nil
+      begin
+        @s.eval('error(77)', nil, '/nada/virtual.lua', 63)
+      rescue Rufus::Lua::LuaError => le
+      end
+
+      expect(le.filename).to eq('/nada/virtual.lua')
+      expect(le.lineno).to eq(63)
+
+      expect(le.original_backtrace.first).to match(/\/lua\/state\.rb:/)
+      expect(le.backtrace.first).to eq('/nada/virtual.lua:63:')
+    end
+
     context 'and errors' do
 
       it 'makes the file and line available' do
@@ -95,8 +112,12 @@ describe Rufus::Lua::State do
         expect(le.kind).to eq('eval:pcall')
         expect(le.msg).to eq('[string "line"]:1: 77')
         expect(le.errcode).to eq(2)
-        expect(le.file).to eq(__FILE__)
-        expect(le.line).to eq(__LINE__ - 8)
+
+        expect(le.filename).to eq(__FILE__)
+        expect(le.lineno).to eq(__LINE__ - 9)
+
+        expect(le.original_backtrace.first).to match(/\/lua\/state\.rb:/)
+        expect(le.backtrace.first).to match(/\/eval_spec\.rb:/)
       end
     end
   end
